--- a/Dev/templates/home.html
+++ b/Dev/templates/home.html
@@ -4,5 +4,5 @@
 
 {% block content %}
 <h2>Home Page</h2>
-<p>Bienvenu*e, {{ prenom }}{{ nom }}!</p>
+<p>Bienvenu*e, {{ email }}!</p>
 {% endblock %}
