--- a/Dev/templates/index.html
+++ b/Dev/templates/index.html
@@ -16,10 +16,10 @@
 -->
 			</div>
 			<form action="{{ url_for('login') }}" method="post">
-				<label for="username">
+				<label for="email">
 					<i class="fas fa-user"></i>
 				</label>
-				<input type="text" name="username" placeholder="Username" id="username" required>
+				<input type="text" name="email" placeholder="Email" id="email" required>
 				<label for="password">
 					<i class="fas fa-lock"></i>
 				</label>
