--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -39,6 +39,6 @@
     {%endfor%}
 
 </table>
-<a href="/" style="margin-top: 20px; float: right">Valider</a>
+<a href="home.html" style="margin-top: 20px; float: right">Valider</a>
 </body>
 </html>
